--- a/front-tcc/package.json
+++ b/front-tcc/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
+    "@angular/common": "^19.0.6",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
@@ -22,7 +22,9 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.7",
     "@primeng/themes": "^19.0.5",
+    "@types/leaflet": "^1.9.16",
     "express": "^4.18.2",
+    "leaflet": "^1.9.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
